Added base styles

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,12 @@ span, a{
   display: block;
   text-decoration: none;
 }
+.flexContainer{
+  display: flex;
+}
+.flexColumn{
+  flex-direction: column;
+}
 /******************************************
 /* LAYOUT
 /*******************************************/
